to be continued

--- a/bootstrap-3.3.7-dist/index.html
+++ b/bootstrap-3.3.7-dist/index.html
@@ -50,10 +50,8 @@
     <div class="container">
       <div class="jumbotron text-center">
         <h1>Hello World!</h1>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-          Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-          when an unknown printer took a galley of type and scrambled it to make a type 
-          specimen book.</p>
+        <p>DON'T EVER BE AFRAID TO TAKE RISKS, FOR THEY MAKE LIFE WORTH LIVING :)</p>
+        <p>*Enjoy the little things in life... for one day you'll look back and realize they were the big things*</p>
       </div>
     
     <div class="page-header">
